syntax = "proto2";

package treedump;

option java_package = "com.andreikubar.alfresco.migration.exporter.proto";
option java_outer_classname = "ExportProtos";

message AlfrescoNode {
    required string name = 1;
    optional string full_path = 2;
    optional string url = 3;
    optional bool is_folder = 4;
    optional string type = 5;

    repeated Property properties = 6;
    repeated Aspect aspects = 7;
    repeated Permission permissions = 8;
    repeated Translation translations = 9;

    message Property {
        required string name = 1;
        required string value = 2;
    }

    message Aspect {
        required string name = 1;
    }

    message Permission {
        required string permission = 1;
        required string access_status = 2;
        required string authority = 3;
        required bool is_inherited = 4;
        optional string authority_type = 5;
    }

    message Translation {
        required string locale = 1;
        optional string translation = 2;
    }
}

message ExportBatch {
    repeated AlfrescoNode nodes = 1;
}

